fix: Remove padding-right para corrigir posicionamento da scrollbar da pagina

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -20,7 +20,6 @@ main.app-main {
   overflow-y: scroll;
   background-color: #121212;
   margin-top: 0.1rem;
-  margin-right: 0.1rem;
   padding-top: $header-height;
   padding-left: 2rem;
   padding-right: 1rem;
